tdf#159813, tdf#159816: Use correct copied PaM

This fixes both the assertion in CopyFlyInFlyImpl (tdf#159813) and
crash in BigPtrArray::operator[] (tdf#159816).

Change-Id: Ia3424e3a58c7d8fb3e1257dcdbf062fb893da8db
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163683
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>